welcome.lessons.welcome.bat.bool1.Close10.scala.code
def close10(a:Int, b:Int): Int = {
  var c=0
  var d=0
  c=Math.abs(10-a)
  d=Math.abs(10-b)
  if (c>d){
    return b
  }
  if (c=d){
    return a-b
  }
  else{
    return a
  }
}
